[package]
name = "hyperfs-storage"
description = "HyperFS Storage Server"
version = "0.1.0"
edition = "2021"
authors = ["Axel Etcheverry <axel@etcheverry.biz>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
bincode = "1.3.3"
bytes = "1.7.2"
foca = { version = "0.18.0", features = ["std", "bincode", "bincode-codec"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["std", "derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
#swim-rs = "0.1.1"
