[package]
name = "hyperfs-core-lib"
description = "HyperFS Core library"
version = "0.1.0"
license = "MIT"
authors = ["Axel Etcheverry <axel@etcheverry.biz>"]
repository = "https://github.com/hyperscale/hyperfs"
readme = "README.md"
categories = ["network-programming"]
build = "build.rs"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*"
]

[dependencies]
bytes = "~0.4.5"
prost = "~0.2.3"
prost-derive = "~0.2.3"

[build-dependencies]
prost-build = "~0.2.3"

[features]
unstable = []

[badges]
travis-ci = { repository = "hyperscale/hyperfs" }
